--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
     ],
     "license": "MIT",
     "require": {
+        "laravel/ui": "^4.2",
+        "twbs/bootstrap": "^5.2.3",
         "php": "^7.2.5|^8.0",
         "doctrine/dbal": "^3.6",
         "fideloper/proxy": "^4.4",
@@ -15,7 +17,6 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.0",
         "realrashid/sweet-alert": "^5.0",
         "spatie/laravel-permission": "^5.10.1",
         "yajra/laravel-datatables-oracle": "~9.0"
