--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,18 @@
     ],
     "license": "MIT",
     "require": {
-        "laravel/ui": "^4.2",
-        "twbs/bootstrap": "^5.2.3",
         "php": "^7.2.5|^8.0",
+        "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^3.6",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^4.2",
         "realrashid/sweet-alert": "^5.0",
         "spatie/laravel-permission": "^5.10.1",
+        "twbs/bootstrap": "^5.2.3",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
